--- a/templates/search_bar.tmpl
+++ b/templates/search_bar.tmpl
@@ -7,7 +7,7 @@
 						<option {{ 'selected' if prompt == '1' }} value="1">How to</option>
 						<option {{ 'selected' if prompt == '2' }} value="2">What is</option>
 						<option {{ 'selected' if prompt == '3' }} value="3">Examples of</option>
-						<option {{ 'selected' if prompt == '4' }} value="4">(no start)</option>
+						<option {{ 'selected' if prompt == '4' }} value="4">Open search</option>
 					</select>
 				</div>
 				<div class="stt-input form-control border-0">
