rework logs to include more meaningful information; set timestamps to timezone given in secrets

--- a/templates/comment_form.tmpl
+++ b/templates/comment_form.tmpl
@@ -5,7 +5,7 @@
 			<div class="form-group">
 				<h4 for="text">What did you learn from this video?</h4>
 				<div class="stt-textarea">
-					<textarea id="text" name="text" class="form-control" rows="3" autofocus>{{ text }}</textarea>
+					<textarea id="text" name="text" class="form-control comment-form" rows="3" autofocus>{{ text }}</textarea>
 					<button type="button" stt-target="text" class="stt-button btn disabled"><i class="fas fa-microphone-slash"></i></button>
 				</div>
 			</div>
