--- a/templates/search_bar.tmpl
+++ b/templates/search_bar.tmpl
@@ -11,7 +11,7 @@
 					</select>
 				</div>
 				<div class="stt-input form-control border-0">
-					<input id="query-field" autocomplete="off" type="text" class="stt-field typeahead" autofocus name="q" placeholder="type here" aria-label="Search query" aria-describedby="search-button" value="{{ query|e }}">
+					<input id="query-field" autocomplete="off" type="text" class="stt-field typeahead search-bar" autofocus name="q" placeholder="type here" aria-label="Search query" aria-describedby="search-button" value="{{ query|e }}">
 					<button type="button" stt-target="query-field" class="stt-button btn disabled"><i class="fas fa-microphone-slash"></i></button>
 				</div>
 				<div class="input-group-append">
