fix batch of issues

--- a/static/style.css
+++ b/static/style.css
@@ -215,6 +215,13 @@ body {
 	padding-top: 4rem;
 }
 
+/* hack to increase the size of buttons on larger tablets */
+@media(min-width:992px){
+	html {
+			zoom: 1.2;
+	}
+}
+
 .player {
 	background: black;
 }
