--- a/templates/search.html
+++ b/templates/search.html
@@ -15,7 +15,9 @@
 	{% include 'search_results.tmpl' %}
 	</div>
 </div>
+{# 
 {% if results|length > 0 %}
-	<div class="arrow-prompt show-idle-prompt"><i class="fas fa-arrow-down"></i></div>
+	<div class="arrow-prompt show-idle-prompt"><i class="fas fa-caret-down"></i></div>
 {% endif %}
+#}
 {% endblock body %}
