--- a/templates/search_results.tmpl
+++ b/templates/search_results.tmpl
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row show-idle-prompt pt-3 rounded">
 	{% if results|length == 0 and query != '' %}
 	<div class="col">
 		<h3> No video found </h3>
@@ -6,7 +6,8 @@
 	{% else %}
 		{% for video in results %}
 		<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
-			<div class="card mb-3 {{ 'show-idle-prompt' if loop.index == 1 }}">
+			<!--<div class="card mb-3 {{ 'show-idle-prompt' if loop.index == 1 }}">-->
+			<div class="card mb-3">
 				<a class="no-decoration" href="/watch/{{ video.video_id }}?q={{ query }}&prompt={{ prompt }}&folder={{ folder._id if folder }}">
 				<img class="card-img-top" src="{{ video.thumbnail }}">
 				<div class="card-body">
