prevent prompting empty search results

--- a/templates/error.html
+++ b/templates/error.html
@@ -5,5 +5,5 @@
 	<div class="col">
 		<a class="btn btn-primary" href="javascript:window.history.back()"><i class="fas fa-arrow-left"></i> Go back</a>
 </div>
-<div class="arrow-prompt show-idle-prompt"><i class="fas fa-arrow-down"></i></div>
+<!--<div class="arrow-prompt show-idle-prompt"><i class="fas fa-arrow-down"></i></div>-->
 {% endblock body %}
