--- a/templates/user.html
+++ b/templates/user.html
@@ -10,12 +10,21 @@
 						<img class="card-img" src="{{ user.picture }}">
 					</a>
 				</div>
-				<div class="col-8">
+				<div class="col-4">
+					<img class="card-img" src="{{ qrcode }}">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
 					<div class="card-body">
-						<p class="name"><strong>Name:</strong> {{ user.name }}</p>
-						<p class="name"><strong>Email:</strong> {{ user.email }}</p>
+						<p>
+						<span class="name mr-3"><strong>Name:</strong> {{ user.name }}</span>
+						<span class="email"><strong>Email:</strong> {{ user.email }}</span>
+						</p>
+						<p>
 						<a class="btn btn-danger" href="/logout"> <i class="fas fa-sign-out-alt"></i> Logout </a>
 						<a class="btn btn-secondary ml-2" href="/user-modify"> <i class="fas fa-user"></i> Change profile </a>
+						</p>
 					</div>
 				</div>
 			</div>
