--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
 			<div class="form-group">
 				<button id="login-button" class="btn btn-primary mr-2" id="submit" type="submit"> <i class="fas fa-sign-in-alt"></i> Login </button>
 				<!--or create a <a class="ml-1" href="/user"><i class="fas fa-user-plus"></i> New user </a>-->
-				<button id='qrcode-start-button' type="button" class="btn btn-primary" data-toggle="modal" data-target="#qrcode-scanner"> <i class="fas fa-qrcode"></i> Scan QR code </button>
+				<button id='qrcode-start-button' type="button" class="btn btn-secondary" data-toggle="modal" data-target="#qrcode-scanner"> <i class="fas fa-qrcode"></i> Scan QR code </button>
 
 			</div>
 		</form>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i> Cancel</button>
 			</div>
 		</div>
 	</div>
