--- a/templates/login.html
+++ b/templates/login.html
@@ -47,7 +47,7 @@
 
 <!-- QR code scanner model -->
 <div class="modal" id="qrcode-scanner" tabindex="-1" role="dialog" aria-labelledby="qrcode-scanner-label" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="qrcode-scanner-label"> <i class="fas fa-qrcode"></i> Login with QR code</h5>
