--- a/templates/qrcode_scanner.tmpl
+++ b/templates/qrcode_scanner.tmpl
@@ -15,8 +15,8 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button id="choose-camera" type="button" class="btn btn-secondary" style="float: left"><i class="fas fa-sync"></i></button>
-				<button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i> Cancel</button>
+				<button id="choose-camera" type="button" class="btn btn-secondary" style="float: left"><i class="fas fa-sync"></i> Other camera</button>
+				<button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-times"></i> Cancel</button>
 			</div>
 		</div>
 	</div>
