--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -37,6 +37,7 @@
 		{% endif %}
 		{% block body %}{% endblock %}
 		</div>
+		{% include 'confirm_dialog.tmpl' %}
 		<script src="/static/dist/js/popper.min.js"></script>
 		<script src="/static/dist/js/bootstrap.min.js"></script>
 		<script src="/static/bootstrap3-typeahead-modified.js"></script>
