--- a/templates/comment.html
+++ b/templates/comment.html
@@ -23,7 +23,7 @@
 				<div class="col">
 					<h3>Share it with whom?</h3>
 					{% include 'friend_selector.tmpl' %}
-					<button type="submit" class="btn btn-primary"><i class="fas fa-pen"></i> Save</button>
+					<button type="submit" class="btn btn-primary"><i class="fas fa-share"></i> Share</button>
 					<a class="btn btn-danger ml-2" href="/watch/{{ video.video_id }}"><i class="fas fa-times"></i> Cancel</a>
 				</div>
 			</div>
