--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -11,7 +11,7 @@
 			<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
 				<div class="card mb-3">
 					<a href="/playlists/{{ folder._id }}">
-					<div class="card-img-4">
+					<div class="card-img-4 playlist-container">
 					{% for i in range(4) -%}
 						{%- if folder.videos|length > i -%}
 							<img class="card-img-top" src="{{ folder.videos[i].thumbnail }}">
