--- a/templates/watch.html
+++ b/templates/watch.html
@@ -6,7 +6,7 @@
 		{% include 'video.tmpl' %}
 		<div class="mt-3">
 			{% if user %}
-				<a class="btn btn-primary mr-3 mb-2" href="/comment/{{ video.video_id }}#form"><i class="fas fa-comment"></i> Add comment</a>
+				<a class="btn btn-primary mr-3 mb-2" href="/comment/{{ video.video_id }}#form"><i class="fas fa-share"></i> Share</a>
 				{% if folder %}
 					<a class="btn btn-success mb-2" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> {{ folder.name }} </a>
 				{% else %}
