--- a/templates/qrcode_scanner.tmpl
+++ b/templates/qrcode_scanner.tmpl
@@ -21,28 +21,29 @@
 		</div>
 	</div>
 </div>
+  <script type="text/javascript" src="/static/dist/js/webrtc-adapter.js"></script>
 	<script type="text/javascript" src="/static/jsqrcode.js"></script>
 	<script type="text/javascript" src="/static/qrcode_scanner.js"></script>
 	<script>
-		var camera_type = 0;
+		var camera_num = 0;
 		function process_qrcode(result) {
 				$('#qrcode').val(result);
 				$('input').prop('required', false);
 				$('#submit').click();
 		}
 		init_qrcode_scanner(function() {
-			$('#qrcode-start-button').prop('disabled', true);
+			//$('#qrcode-start-button').prop('disabled', true);
 		});
 		$(function() {
 			$('#qrcode-scanner').on('show.bs.modal', function (e) {
-				run_qrcode_scanner(process_qrcode, camera_type);
+				run_qrcode_scanner(process_qrcode, camera_num);
 			})
 			$('#qrcode-scanner').on('hide.bs.modal', function (e) {
 				stop_qrcode_scanner();
 			})
 			$('#choose-camera').click(function() {
-				camera_type = 1 - camera_type;
-				run_qrcode_scanner(process_qrcode, camera_type);
+				camera_num += 1;
+				run_qrcode_scanner(process_qrcode, camera_num);
 			});
 		});
 	</script>
