--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,7 +1,27 @@
 {% extends 'base.tmpl' %}
 {% block title %}Folder{% endblock %}
 {% block body %}
-<h3> <i class="fas fa-star"></i> {{ folder.name }} </h3>
+<div class="row">
+  <div class="col">
+<h3> <i class="fas fa-star"></i> {{ folder.name }} 
+  <form style="float:right" id="rename_form" method="POST" action="/rename-playlist">
+    <input type="hidden" id="rename_name" name="name">
+    <input type="hidden" name="folder" value="{{ folder._id }}">
+    <button type="button" onclick="rename_playlist()" class="btn btn-primary mr-3 mb-2" data-toggle="modal" data-target="#input-dialog"><i class="fas fa-pen"></i> Rename</button>
+  </form>
+</h3>
+  </div>
+</div>
 {% set results = folder.videos %}
 {% include 'search_results.tmpl' %}
+  <script>
+    function rename_playlist() {
+      input_dialog('fa-pen', 'Rename playlist', 'What is the new name?', 'Type playlist name here', 'Rename', function(name) {
+        console.log('do-rename', name);
+        $('#rename_name').val(name);
+        $('#rename_form').submit();
+      });
+    }
+  </script>
+{% include 'input_dialog.tmpl' %}
 {% endblock body %}
