--- a/templates/search_results.tmpl
+++ b/templates/search_results.tmpl
@@ -8,7 +8,7 @@
 		<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
 			<!--<div class="card mb-3 {{ 'show-idle-prompt' if loop.index == 1 }}">-->
 			<div class="card mb-3">
-				<a class="no-decoration" href="/watch/{{ video.video_id }}?q={{ query }}&prompt={{ prompt }}&folder={{ folder._id if folder }}">
+				<a class="no-decoration" href="/watch/{{ video.video_id }}">
 				<img class="card-img-top" src="{{ video.thumbnail }}">
 				<div class="card-body">
 					{{ video.title|safe }}
