--- a/templates/topbar.tmpl
+++ b/templates/topbar.tmpl
@@ -17,9 +17,9 @@
       <li class="nav-item {{ 'active' if nav == 'search' }}">
 				<a class="nav-link" href="/search" title="Search"><i class="fas fa-search"></i><span class="sr-only">Search</span></a>
       </li>
-      <!--<li class="nav-item {{ 'active' if nav == 'video' }}">
+      <li class="nav-item {{ 'active' if nav == 'video' }}">
 				<a class="nav-link" href="/watch" title="Video"><i class="fas fa-film"></i><span class="sr-only">Video</span></a>
-      </li>-->
+      </li>
 			{% if user %}
 			<li class="nav-item {{ 'active' if nav == 'friends' }}">
 				<a class="nav-link" href="/friends" title="Friends"><i class="fas fa-user-friends"></i><span class="sr-only">Friends</span></a>
