--- a/templates/watch.html
+++ b/templates/watch.html
@@ -3,6 +3,7 @@
 {% block body %}
 <div class="row mb-4">
 	<div class="col">
+  {% if video %}
 		{% include 'video.tmpl' %}
 		<div class="mt-3">
 			{% if user %}
@@ -14,6 +15,9 @@
 				{% endif %}
 			{% endif %}
 		</div>
+  {% else %}
+  <h3> Search for <a href="/search">videos</a> first. </h3>
+  {% endif %}
 	</div>
 </div>
 {% if user %}
