--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -2,50 +2,37 @@
 {% block title %}Playlists{% endblock %}
 {% block body %}
 <div class="row">
-	{% if folders|length == 0 %}
-	<div class="col">
-		<h3>Add <a href="/search">videos</a> to playlists.</h3>
-	</div>
-	{% else %}
-		{% for folder in folders %}
-			<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
-				<div class="card mb-3">
-					<a href="/playlists/{{ folder._id }}">
-            <div class="card-img-4 playlist-container {{ "playlist-empty" if folder.videos|length == 0 else "playlist-regular" }}">
-					{% for i in range(4) -%}
-						{%- if folder.videos|length > i -%}
-              <img src="{{ folder.videos[i].thumbnail }}">
-						{%- else -%}
-              <img class="card-img-top" src="/static/img/transparent.png">
-						{%- endif -%}
-					{%- endfor %}
-					</div>
-					<div class="card-body">
-						<i class="fas fa-star"></i> {{ folder.name }}: 
-						{% if folder.count == 0 %}
-							Empty
-						{% elif folder.count == 1 %}
-							{{ folder.count }} video
-						{% else %}
-							{{ folder.count }} videos
-						{% endif %}
-					</div>
-					</a>
-				</div>
-			</div>
-		{% endfor %}
-			<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
-				<div class="card mb-3">
-          <a href="/add-playlist">
-					<div class="card-img-4 playlist-container playlist-add">
-              <img class="card-img-top" src="/static/img/transparent.png"><img class="card-img-top" src="/static/img/transparent.png"><img class="card-img-top" src="/static/img/transparent.png"><img class="card-img-top" src="/static/img/transparent.png">
-					</div>
-					<div class="card-body">
-            Add playlist
-					</div>
-					</a>
-				</div>
-			</div>
-	{% endif %}
+  {% for folder in folders %}
+  <div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
+    <div class="card mb-3">
+      <a class="no-decoration" href="/playlists/{{ folder._id }}">
+        <div class="card-img-4 playlist-container {{ "playlist-empty" if folder.videos|length == 0 else "playlist-regular" }}">
+          {% for i in range(4) -%}
+          {%- if folder.videos|length > i -%}
+          <img src="{{ folder.videos[i].thumbnail }}">
+          {%- else -%}
+          <img class="card-img-top" src="/static/img/transparent-480x360.png">
+          {%- endif -%}
+          {%- endfor %}
+        </div>
+        <div class="card-body">
+          {{ folder.name }}
+        </div>
+      </a>
+    </div>
+  </div>
+  {% endfor %}
+  <div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
+    <div class="card mb-3">
+      <a class="no-decoration" href="/add-playlist">
+        <div class="card-img">
+          <img class="card-img-top" src="/static/img/playlist-add.svg">
+        </div>
+        <div class="card-body">
+          <i class="fa fa-star"></i> Add playlist
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
 {% endblock body %}
