--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -10,6 +10,7 @@
 				<img src="{{ item.picture }}" class="card-img-top" alt="{{ item.name }}">
 				<div class="card-body">
 					{{ item.name }}
+					{{ item.email }}
 				</div>
 			</a>
 		</div>
