--- a/templates/add_playlist.html
+++ b/templates/add_playlist.html
@@ -9,8 +9,8 @@
 				<h3>Create a new playlist</h3>
 				<input type="text" class="form-control" name="name" placeholder="Type playlist name here">
 			</div>
-			<button type="submit" class="btn btn-primary mr-3 mb-2"><i class="fas fa-star"></i> Save</button>
-			<a href="#" onclick="window.history.go(-1); return false;" class="btn btn-danger mb-2"><i class="fas fa-times"></i> Cancel</a>
+			<button type="submit" class="btn btn-primary mr-3"><i class="fas fa-star"></i> Save</button>
+			<a href="#" onclick="window.history.go(-1); return false;" class="btn btn-danger"><i class="fas fa-times"></i> Cancel</a>
 		</form>
 	</div>
 </div>
